class level bundle updated

--- a/app/src/main/res/layout/activity_bio.xml
+++ b/app/src/main/res/layout/activity_bio.xml
@@ -4,30 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f9f9f9"
-    tools:context=".MainActivity" >
+    tools:context=".BioActivity">
 
     <ImageView
-        android:id="@+id/view1"
-        android:layout_width="156dp"
-        android:layout_height="184dp"
-        android:background="#D500F9"
+        android:id="@+id/imageView"
+        android:layout_width="72dp"
+        android:layout_height="74dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.12"
-        tools:srcCompat="@color/purple_200" />
+        app:srcCompat="@android:drawable/btn_star_big_on" />
 
-    <ImageView
-        android:id="@+id/view2"
-        android:layout_width="174dp"
-        android:layout_height="201dp"
-        android:background="#00E5FF"
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="130dp"
+        android:layout_height="40dp"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view1"
-        tools:srcCompat="@color/teal_200" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
